test/spec_vectors/i32/fail/module_70.wat
(module (func (result i32) (i32.eqz (i64.const 0))))